--- a/index.html
+++ b/index.html
@@ -857,7 +857,10 @@ value="1NhiRR6tXK4zBo3UkYNxLaBd3vXpQDmaty">
 					</div>
 
 					<div class="tab-pane tab-content" id="sign">
-						<h2>Sign Transaction </h2>
+						<h2>Sign Transaction 
+
+<small><a href="https://bchpool.github.io/dl/" target=_blank>
+offline</a></small></h2>
 						<p>
 </p>
 
