--- a/index.html
+++ b/index.html
@@ -976,10 +976,10 @@ Prepare a new address with the exact token amount to swap.
 Fill the input SLP addr, the input BCH addr, press "Load". Check the token and bch amounts.
 
 <br>
-Press "Generate Swap Tx" and your transaction is ready!
+Press "Generate Swap Tx" and your transaction is ready.
 
 <br><br>
-Sign your hex transaction. Send it to your conterparty for the 2nd signature.
+Sign your raw hex transaction. Send it to your conterparty for the 2nd signature.
 
 <br>
 Trade in seconds!
