--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,8 @@ Blockchair.com</a>
                                                                        
 <div class="embed-responsive embed-responsive-4by3">                     
 <p><center>                                                              
-<iframe class="embed-responsive-item" src="https://kiwiirc.com/nextclient/irc.kiwiirc.com/#bchpool-SLPswap">   
+<iframe class="embed-responsive-item" 
+src="https://webchat.quakenet.org/?channels=bchpool-SLPswap&uio=d4">
 </iframe>                                                                  
 </div>        
 </div>
