--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@ BitcoinTalk.org Forum</a>
 <br><br>                                                            
                                                                              
 <a href="#irc"> 
-bchpool SLPswap IRC Forum</a>                                                  
+bchpool IRC Forum</a>                                                  
 </div>        
 
 
@@ -1075,7 +1075,7 @@ Blockchair.com</a>
 <div class="embed-responsive embed-responsive-4by3">                     
 <p><center>                                                              
 <iframe class="embed-responsive-item" 
-src="https://webchat.quakenet.org/?channels=bchpool-SLPswap&uio=d4">
+src="https://webchat.ircnet.net/?channels=bchpool&uio=d4">
 </iframe>                                                                  
 </div>        
 </div>
